--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,5 @@ deploy-job:
     - export VAULT_AUTH_ROLE=gitlab-ci
     - export VAULT_ADDR=https://vault-dc.info.univ-lyon1.fr
     - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=gitlab-ci jwt=$CI_JOB_JWT)"
-    - export SECRET=$(vault kv get --field=secret --mount=kv asbd-kevily/tp1/password)
-    - echo "$SECRET" >secret
+    - vault kv get --field=secret --mount=kv asbd-kevily/tp1/password > secret
     - tar cz * | vault ssh -role asbd-kevily -mode otp -strict-host-key-checking=no ubuntu@192.168.76.125 "(cd /var/www/html && rm -rf * && tar xz)"
